--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=icFryiA3lyltEF1njMXfTfYRhbrRwh
-MONGO_URI=mongodb+srv://llluis123:Fni0csE0biazJRA9@luiscantillo.as3tt.mongodb.net/myDatabase?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://llluis123:Mi3rULGzP5Zy1aaN@digitalgames.2pxff.mongodb.net/?retryWrites=true&w=majority&appName=digitalgames
